--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,2 +1,4 @@
 @import 'tailwindcss';
-@plugin "daisyui";
+ @plugin "daisyui" {
+   themes: light , cupcake, dark, bumblebee, emerald, corporate, synthwave, cyberpunk, valentine, halloween, garden, forest, aqua, lofi, pastel, fantasy, wireframe, black, luxury, dracula, cmyk, autumn, business, acid, lemonade, night, coffee, winter, dim, nord, sunset;
+ }
